# pbshm-flask-core

./: .gitignore  MANIFEST.in  README.md  pbshm.gitignore  pyproject.toml  requirements.txt
.github/workflows/: pypi-publish.yml  pytest-core.yml
pbshm/: __init__.py  app.py  db.py
pbshm/authentication/: __init__.py  authentication.py
pbshm/authentication/templates/: login.html
pbshm/initialisation/: __init__.py  initialisation.py  user-schema.json
pbshm/layout/: layout.py
pbshm/layout/static/: style.css
pbshm/layout/templates/: base.html  home.html  portal.html
pbshm/layout/templates/sidebars/: icon.html  text.html
pbshm/mechanic/: __init__.py  mechanic.py
pbshm/pathfinder/: pathfinder.py
pbshm/pathfinder/templates/: browse.html  list.html
pbshm/templates/: portal.html
pbshm/timekeeper/: __init__.py  timekeeper.py
tests/: auxiliary.py  conftest.py  test_authentication.py  test_initialisation.py  test_mechanic.py  test_timekeeper.py
