[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pbshm-core"
version = "1.2.0"
authors = [
    { name = "Dan Brennan", email = "d.s.brennan@sheffield.ac.uk" }
]
description = "PBSHM Core Library"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Framework :: Flask"
]
requires-python = ">=3.9.18"
dependencies = [
    "Flask == 3.1.3",
    "Werkzeug == 3.1.8",
    "pymongo == 4.17.0",
    "pytz == 2026.2"
]

[project.urls]
homepage = "https://github.com/dynamics-research-group/pbshm-flask-core"

[tool.setuptools.packages.find]
exclude = ["instance", "tests"]